23.aug (ws)
      - replace dynamic generated icons by static files
      - make icon files installable
      - new command line option "-i" to load icons from filesystem
        (icons can be edited and tested without compiling mscore)
22.aug (db)
      - fix #6735: C# for AltoSax in default soundfont is silent
21.aug (lv)
      - #5637 support reading bww files: fixed measure length
17.aug (ws)
      - playback of tremolos
16.aug (lv)
      - #5637 support reading bww files: iotest (mscore)
15.aug (lv)
      - #5637 support reading bww files: set midi instrument to 72
      - #5637 support reading bww files: fix multiple grace notes
      - #5637 support reading bww files: iotest (bww2mxml)
      (la)
      - fix #6706: Crash when inserting slurs from palette while editing text
      - fix #6740: Autosave works only the first time
14.aug (ws)
      - infrastructure for new drumroll editor
      - changed implementation of KeySig + KeySigEvent: do not pack
        all information in subtype()
      (lv)
      - #5637 support reading bww files: line breaks
12.aug (lv)
      - #5637 support reading bww files: TuneTempo
       (ws)
      - new elements TremoloBar, Bend()
11.aug (ws)
      - updated linked parts dialog
      - new shortcut: underscore to enter tenuto articulation
5.aug (la)
      - fix #6479: Crash when closing score during playback
      - fix #6597: Close/reload crash on XP
      - fix cursor move on repeatmeasure in plugin framework
      - fix instrument name containing flats for plugin framework
      - fix #6505: Mixer is not refreshed when scores are switched
3.aug (ws)
      - new context menu for palettes: new function: revert to
        factory settings
29.jul (ws)
      - added google-diff-match-patch library to build
      - implemented basic functionality for linked parts
24.jul (ws)
      - replace buildin DejaVu fonts with FSF freefont
      - new: import of GuitarPro *.gtp *.gp3 *.gp4 *.gp5 files
13.jul (ws)