@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>611</width>
+    <width>645</width>
     <height>481</height>
    </rect>
   </property>
@@ -756,6 +756,9 @@
           </property>
           <item row="0" column="0">
            <widget class="QCheckBox" name="showHeaderFirstPage">
+            <property name="toolTip">
+             <string>show header also on first page</string>
+            </property>
             <property name="text">
              <string>show first</string>
             </property>
@@ -763,6 +766,9 @@
           </item>
           <item row="0" column="1">
            <widget class="QCheckBox" name="headerOddEven">
+            <property name="toolTip">
+             <string>use odd even page header</string>
+            </property>
             <property name="text">
              <string>odd/even</string>
             </property>
@@ -820,6 +826,26 @@
             </property>
            </widget>
           </item>
+          <item row="1" column="2">
+           <widget class="QToolButton" name="editEvenHeader">
+            <property name="toolTip">
+             <string>edit even page header</string>
+            </property>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QToolButton" name="editOddHeader">
+            <property name="toolTip">
+             <string>add odd page header</string>
+            </property>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -830,6 +856,9 @@
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="toolTip">
+          <string/>
          </property>
          <property name="title">
           <string>Footer Text</string>
@@ -849,6 +878,9 @@
           </property>
           <item row="0" column="0">
            <widget class="QCheckBox" name="showFooterFirstPage">
+            <property name="toolTip">
+             <string>show footer also on first page</string>
+            </property>
             <property name="text">
              <string>show first</string>
             </property>
@@ -856,6 +888,9 @@
           </item>
           <item row="0" column="1">
            <widget class="QCheckBox" name="footerOddEven">
+            <property name="toolTip">
+             <string>use odd even page footer</string>
+            </property>
             <property name="text">
              <string>odd/even</string>
             </property>
@@ -892,6 +927,26 @@
               <width>0</width>
               <height>40</height>
              </size>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QToolButton" name="editEvenFooter">
+            <property name="toolTip">
+             <string>edit even page footer</string>
+            </property>
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="2">
+           <widget class="QToolButton" name="editOddFooter">
+            <property name="toolTip">
+             <string>edit odd page header</string>
+            </property>
+            <property name="text">
+             <string>...</string>
             </property>
            </widget>
           </item>
